tests/ui/feature-gates/feature-gate-generic_arg_infer.normal.stderr
error[E0658]: using `_` for array lengths is unstable
  --> $DIR/feature-gate-generic_arg_infer.rs:13:18
   |
LL |     let _y: [u8; _] = [0; 3];
   |                  ^ help: consider specifying the array length: `3`
   |
   = note: see issue #85077 <https://github.com/rust-lang/rust/issues/85077> for more information
   = help: add `#![feature(generic_arg_infer)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: const arguments cannot yet be inferred with `_`
  --> $DIR/feature-gate-generic_arg_infer.rs:18:20
   |
LL |     let _x = foo::<_>([1, 2]);
   |                    ^
   |
   = note: see issue #85077 <https://github.com/rust-lang/rust/issues/85077> for more information
   = help: add `#![feature(generic_arg_infer)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: using `_` for array lengths is unstable
  --> $DIR/feature-gate-generic_arg_infer.rs:11:27
   |
LL |     let _x: [u8; 3] = [0; _];
   |                           ^
   |
   = note: see issue #85077 <https://github.com/rust-lang/rust/issues/85077> for more information
   = help: add `#![feature(generic_arg_infer)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
